--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
   "name": "insurcheck-server",
   "version": "1.0.0",
   "description": "InsurCheck Backend API",
-  "main": "index.ts",
+  "main": "src/server.js",
   "type": "module",
   "scripts": {
-    "dev": "tsx index.ts",
+    "dev": "tsx src/server.js",
     "start": "node dist/index.js",
     "build": "tsc",
     "seed": "tsx scripts/seedTestData.ts"
