--- a/server/package.json
+++ b/server/package.json
@@ -10,19 +10,23 @@
     "build": "tsc",
     "seed": "tsx scripts/seedTestData.ts"
   },
-  "keywords": ["insurcheck", "api", "backend"],
+  "keywords": [
+    "insurcheck",
+    "api",
+    "backend"
+  ],
   "author": "InsurCheck Team",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5"
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
